# solve_it_mcp

./: LICENSE  README.md  pyproject.toml  requirements.txt
memory-bank/: current.md  foundation.md  roadmap.md
src/: __init__.py  server.py
src/tools/: __init__.py  base.py  solveit_base.py  solveit_tools.py
src/utils/: __init__.py  data_path.py  errors.py  knowledge_base_manager.py  logging.py  security.py  security_middleware.py  shared_security.py
tests/: conftest.py
tests/integration/: test_real_library_integration.py  test_server_integration.py
tests/unit/: test_data_path.py  test_server.py  test_solveit_base.py
tests/unit/test_tools/: test_bulk_tools.py  test_objective_tools.py  test_parameter_validation.py  test_query_tools.py  test_relationship_tools.py
